--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.17",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
