--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "framer-motion": "^10.12.17",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
